[gd_scene load_steps=6 format=3 uid="uid://d1melr1fetrom"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/Cards/TRAIT/trait_card.gd" id="1_8b124"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="1_m3aei"]
[ext_resource type="PackedScene" uid="uid://c5ld7n1ycuql2" path="res://UI/Buttons/IconBtn/IconBtn.tscn" id="2_q3fly"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7s1e"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2aow3"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[node name="TraitCard" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q7s1e")
script = ExtResource("1_8b124")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2aow3")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IconBtn" parent="VBoxContainer/PanelContainer/MarginContainer2/HBoxContainer/HBoxContainer" instance=ExtResource("2_q3fly")]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
icon = 25
is_hoverable = false

[node name="NameLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TRAIT NAME"
label_settings = ExtResource("1_m3aei")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_vertical = 5
text = "The description of the trait goes here.  It has to be kinda short."
label_settings = ExtResource("1_m3aei")
vertical_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 2
